--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         image: cert-nginx
         dockerfile: Dockerfile
-        tags: $(date +%s)
+        tags: $(date +%s), v1, latest
         registry: ghcr.io
         username: ${{ secrets.GHCR_USERNAME }}
         password: ${{ secrets.GHCR_TOKEN }}
