--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,3 +27,4 @@ jobs:
         password: ${{ secrets.GHCR_TOKEN }}
         addLatest: true
         addTimestamp: true
+        platform: linux/amd64,linux/arm64,linux/arm/v7
