--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,4 +27,5 @@ jobs:
         password: ${{ secrets.GHCR_TOKEN }}
         addLatest: true
         addTimestamp: true
+        multiPlatform: true
         platform: linux/amd64,linux/arm64,linux/arm/v7
