--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,9 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-
-    - name: Docker Build & Push 
-      uses: mr-smithers-excellent/docker-build-push@v5
+    - uses: mr-smithers-excellent/docker-build-push@v6
+      name: Build & push Docker image
       with:
         image: cert-nginx
         dockerfile: Dockerfile
